--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
 body {
-  margin: 0;
-  padding: 1.5rem 2rem 0 2rem;
+  width: 90%;
+  margin: auto;
+  padding: 1.5rem 4rem 0 4rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(240, 240, 240);
 }
 
 code {
