--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   padding: 1.rem 2rem 2rem 0;
+  overflow-y: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
