--- a/src/components/chatboard/chatboard.css
+++ b/src/components/chatboard/chatboard.css
@@ -1,14 +1,37 @@
+p {
+    margin: 0;
+    padding: 0.25rem;
+}
 button {
     outline: none;
     border: none;
     background-color: transparent;
     cursor: pointer
 }
-.b_container {
+
+ul {
+    list-style : none;
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+}
+.b_wrap {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.b_right {
+    flex : 2;
     box-sizing: border-box;
-    width: 60rem;
     background-color: white;
-    height: 40rem;
+    width: 100%;
+    height: 80vh;
     padding: 2rem;
     border-radius: 16px;
     display: flex;
@@ -79,9 +102,6 @@ button {
     display: flex;
     flex-direction: column;
     gap : 0.5rem;
-    list-style : none;
-    margin: 0;
-    padding: 0;
 }
 
 .message {
@@ -103,3 +123,73 @@ button {
     border-radius: 16px 0 16px 16px;
 }
 
+.b_left {
+    box-sizing: border-box;
+    flex: 1;
+    width: 100%;
+    height: 80vh;
+    background-color: white;
+    border-radius: 16px;
+    padding: 2rem;
+    overflow-y: auto;
+}
+
+.chatRows {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 0.5rem;
+}
+
+.chatList {
+    display: flex;
+    align-items: center;
+}
+
+.li_description {
+    flex : 1;
+    margin-left: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+    padding: 4px 8px;
+}
+
+.li_left p:nth-of-type(1) {
+    font-weight: bold;
+}
+
+.li_left p:nth-of-type(2) {
+    font-size: 0.75rem;
+    color: gray;
+}
+
+.li_right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.li_right p:nth-of-type(1) {
+    font-size: 0.8rem;
+    font-weight: bold;
+}
+
+.msgCount {
+    background-color: orange;
+    width: 20px;
+    height: 20px;
+    font-size: 0.75rem;
+    color: white;
+    font-weight: bold;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chatList:last-child(1)::after {
+    content: '';
+    width: 90%;
+    height: 1px;
+    border: 1px solid black;
+}
