--- a/src/components/chatlist/list.css
+++ b/src/components/chatlist/list.css
@@ -4,6 +4,10 @@
     border-bottom: 1px solid darkgray;
 }
 
+.chatList:hover {
+    cursor: pointer;
+}
+
 .li_description {
     flex : 1;
     margin-left: 0.5rem;
