--- a/src/components/chatlist/list.css
+++ b/src/components/chatlist/list.css
@@ -2,11 +2,28 @@
     display: flex;
     align-items: center;
     border-bottom: 1px solid darkgray;
+    padding: 0.2rem 0.5rem;
 }
 
 .chatList:hover {
     cursor: pointer;
 }
+
+.chatList.active {
+    background: rgb(252, 183, 55);
+    border-radius: 4px;
+    color: white;
+    transition: all 300ms ease-in-out;
+}
+
+.chatList.active > .li_description >.li_right > .msgCount {
+    display: none;
+}
+
+.chatList.active > .li_description >.li_right {
+    justify-content: center;
+}
+
 
 .li_description {
     flex : 1;
