--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 
 body {
-  width: 90%;
-  margin: auto;
+  width: 90vw;
+  margin: 0;
   overflow: none;
   padding: 1.5rem 4rem 0 4rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
