--- a/src/components/popupContent/popupContent.css
+++ b/src/components/popupContent/popupContent.css
@@ -1,3 +1,7 @@
+input {
+    outline: none;
+}
+
 .dimmed_layer_wrapper .full_layer {
     overflow:hidden;
     position:fixed;
@@ -20,23 +24,100 @@
     box-sizing: border-box;
     z-index:2;
     position:absolute;
-    display:inline-block;
     vertical-align:middle;
-    width:calc(100%-56px);
+    width: 30%;
+    height: 50vh;
     min-height: 200px;
     max-height:100%;
     min-width: 200px;
-    background-color:yellowgreen;
+    background-color:white;
     white-space:normal;
     word-break:break-word;
-    text-align:left;
+    text-align:center;
     border-radius:10px;
-    padding:30px;
+    padding:25px;
     margin:auto;
     box-sizing:border-box;
     font-size: 16px;
-
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+}
+
+.popUpHeader {
+    flex: 2;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+}
+
+.h_avator {
+    flex: 1;
+    font-size: calc(1rem + 1vw);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.h_wrap {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+.h_wrap span:nth-of-type(1){
+    color: black;
+    font-size: calc(1rem + 0.5vw);
+    font-weight: bold;
+}
+
+.h_wrap span:nth-of-type(2) {
+    margin-top: 0.3rem;    
+    font-size: 0.8rem;
+    color: darkgray;
+}
+
+.popUpInput {
+    flex: 1;
+    width: 100%;
+    height: 100%;
+}
+
+.inputWrapper > input{
+    width: 80%;
+    margin: 0.3rem 0.25rem;
+    padding: 0.6rem 0.8rem;
+    font-size: 0.8rem;
+    border: 2px solid rgb(85, 26, 137);
+    border-radius: 24px;
+}
+
+.popUpFooter {
+    flex: 1;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    gap: 2rem;
+    width: 80%;
+    margin: auto;
+}
+.popUpFooter span {
+    font-size: calc(1vw);
+}
+.popUpFooter span:hover {
+    cursor: pointer;
+}
+
+.popUpBtn.login {
+    width: 40%;
+    height: 70%;
+    font-size: calc(1.2vw);
+    font-weight: bold;
+    color: white;
+    background-color: rgb(85, 26, 137);
+    border-radius: 24px;
+    padding: 0.25rem 0.5rem;
 }
