--- a/src/components/chatcard/chatcard.css
+++ b/src/components/chatcard/chatcard.css
@@ -11,6 +11,7 @@
 }
 
 .card {
+    position: relative;
     background-color: white;
     margin: 1rem 0;
     box-sizing: border-box;
@@ -41,4 +42,17 @@
     display: flex;
     justify-content: space-between;
     color: darkgrey;
+}
+
+.deleteBtn {
+    position: absolute;
+    left: 95%;
+    top: 15%;
+    transition: 150ms all ease-in-out;
+}
+
+.deleteBtn:hover {
+    color: red;
+    transform: scale(1.1);
+    cursor: pointer;
 }
