--- a/src/components/popup/popupContent/popupContent.css
+++ b/src/components/popup/popupContent/popupContent.css
@@ -120,3 +120,9 @@ input {
     border-radius: 24px;
     padding: 0.25rem 1rem;
 }
+
+.closeBtn {
+    position: absolute;
+    font-size: 1rem;
+    left: 90%
+}
