--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
-
+* {
+  box-sizing: border-box;
+}
 body {
   width: 90vw;
-  margin: 0;
+  margin: auto;
   overflow: none;
   padding: 1.5rem 4rem 0 4rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -15,4 +17,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@media (max-width : 1024px) {
+  #root {
+    box-sizing: border-box;
+    height: 100vh;
+    padding : 0;
+  }
 }
