make responsive css

--- a/src/components/chatcard/chatcard.css
+++ b/src/components/chatcard/chatcard.css
@@ -44,3 +44,12 @@
     transform: scale(1.1);
     cursor: pointer;
 }
+
+@media screen and (max-width:1024px) {
+    .card {
+        width: 100%;
+    }
+    .deleteBtn {
+        left: 90%;
+    }
+}
