--- a/src/components/FAQcontent/FAQcontent.css
+++ b/src/components/FAQcontent/FAQcontent.css
@@ -51,3 +51,10 @@
     margin-top: 1rem;
     display: block;
 }
+
+@media screen and (max-width:1024px) {
+    .f_container {
+        max-width: 100%;
+        margin-top : 1rem;
+    }
+}
