--- a/src/components/chatboard/chatboard.css
+++ b/src/components/chatboard/chatboard.css
@@ -54,7 +54,7 @@ img {
 
 .b_footer {
     width: 100%;
-    height: 4rem;
+    height: 10%;
     background-color: white;
     display: flex;
     justify-content: space-between;
@@ -82,19 +82,22 @@ img {
     color: gray
 }
 .b_sendBtn {
+    flex: 1;
     display: flex;
     align-items: center;
-    padding: 0 1rem
+    padding-left:1rem;
+
 }
 .btn_inner {
     background-color: green;
     border-radius: 50%;
+
 }
 .btn_inner > button{
     width: 100%;
     height: 100%;
-    font-size: 1.5rem;
-    padding: 1rem;
+    font-size: 1.2rem;
+    padding: 0.8rem;
     color: white;
 }
 
@@ -142,12 +145,14 @@ img {
         height: 100%;
     }
     .b_left {
-        flex: 1;
+        flex: none;
         padding: 1rem;
-        overflow-y:hidden
+        overflow-y:hidden;
+        height: fit-content;
     }
-    .b_list {
-        height: 6rem;
+    .b_right {
+        flex: none;
+        padding: 1rem;
     }
     .chatRows {
         flex-direction: row;
@@ -156,11 +161,20 @@ img {
     .chatList {
         flex: 1;
     }
-    .b_right {
-        flex: 5;
-    }
     .b_board {
         position: relative;
         height: 100%;
+    }
+
+    .btn_inner > button{
+        width: 100%;
+        height: 100%;
+        font-size: 1rem;
+        padding: 0.5rem;
+        color: white;
+    }
+
+    .emoji>button, .b_input > input {
+        font-size: 1rem;
     }
 }
