--- a/src/path/mychat/mychat.css
+++ b/src/path/mychat/mychat.css
@@ -9,3 +9,9 @@
     overflow-y: auto;
     height: 55vh;
 }
+
+@media screen and (max-width : 1024px) {
+    .c_container {
+        width: 90%;
+    }
+}
