--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 a:link {
-  color: none;
+  color: black;
 }
 body {
   width: 90vw;
@@ -30,5 +30,6 @@ code {
   }
   body {
     width: 100%;
+    padding: 1rem;
   }
 }
